bin/testsuite/tests/compiler/src/errors/compiler407.swg

#global testerror "Err0401"
#test
{
	var c = cast(s32, bool) 0
}